feat: complete version 1.0

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,19 @@
   <body>
     <h1>Battleship</h1>
     <h2 class="winner"></h2>
+    <div class="before-game">
+      <div class="desk-for-ship"></div>
+      <div class="ship-container-wrapper">
+        <h3>
+          Horizontal / Vertical
+          <label class="switch">
+            <input id="oriental-checkbox" type="checkbox" />
+            <span class="slider round"></span>
+          </label>
+        </h3>
+        <div class="ship-container"></div>
+      </div>
+    </div>
     <div class="container">
       <div class="desk-wrapper first-player-desk">
         <h2>You</h2>
